Fix didChange event firing incorrectly and improve diff info